--- a/views/index.pug
+++ b/views/index.pug
@@ -12,7 +12,7 @@ html
     br
     h3= 'Eigenschaften:'
     ul
-      li= 'Entropiequelle: 30-sekündige mp3-Datei'
+      li= 'Entropiequelle: mp3-Datei, 34 Sekunden lang'
       li= 'Startwert: die sechs letzten Ziffern der aktuellen Unix-Zeit'
       li= 'Länge des pseudozufälligen Strings: 20 Zeichen'
     h3= 'Zum Erzeugen eines neuen Strings, Seite aktualisieren'
