[📄] Liked source code in frontend

--- a/views/index.pug
+++ b/views/index.pug
@@ -16,4 +16,5 @@ html
       li= 'Startwert: die sechs letzten Ziffern der aktuellen Unix-Zeit'
       li= 'Länge des pseudozufälligen Strings: 20 Zeichen'
     h3= 'Zum Erzeugen eines neuen Strings, Seite aktualisieren'
+    a(href='https://github.com/FabianReitz/audio_base64_converter') Source code on GitHub
       
