--- a/styles/styles.css
+++ b/styles/styles.css
@@ -11,3 +11,12 @@ h1 {
 h2 {
     text-align: center;
 }
+
+a {
+    position: fixed;
+    left: 8px;
+    bottom: 8px;
+    font-size: 24px;
+    text-decoration: underline;
+    color: #fafafa;
+}
