--- a/views/index.pug
+++ b/views/index.pug
@@ -7,6 +7,7 @@ html
   body
     h1= 'Pseudozufallsgenerator'
     h2= randomString
+    button(onClick='window.location.reload();') ♻️
     br
     br
     br
@@ -15,6 +16,6 @@ html
       li= 'Entropiequelle: mp3-Datei, 34 Sekunden lang'
       li= 'Startwert: die sechs letzten Ziffern der aktuellen Unix-Zeit'
       li= 'Länge des pseudozufälligen Strings: 20 Zeichen'
-    h3= 'Zum Erzeugen eines neuen Strings, Seite aktualisieren'
-    a(href='https://github.com/FabianReitz/audio_base64_converter') Source code on GitHub
+    p. 
+      Made by #[a(href='https://github.com/FabianReitz/audio_base64_converter') Fabian Reitz] - View my Code on #[a(href='https://github.com/FabianReitz/audio_base64_converter') GitHub]
       
