[⛓] Fixed wrong link

--- a/views/index.pug
+++ b/views/index.pug
@@ -17,5 +17,5 @@ html
       li= 'Startwert: die sechs letzten Ziffern der aktuellen Unix-Zeit'
       li= 'Länge des pseudozufälligen Strings: 20 Zeichen'
     p. 
-      Made by #[a(href='https://github.com/FabianReitz/audio_base64_converter') Fabian Reitz] - View my Code on #[a(href='https://github.com/FabianReitz/audio_base64_converter') GitHub]
+      Made by #[a(href='https://www.fabianreitz.dev') Fabian Reitz] - View my Code on #[a(href='https://github.com/FabianReitz/audio_base64_converter') GitHub]
       
