[📄] Editing Frontend to contain presentation

--- a/views/index.pug
+++ b/views/index.pug
@@ -16,6 +16,15 @@ html
       li= 'Entropiequelle: mp3-Datei, 34 Sekunden lang'
       li= 'Startwert: die sechs letzten Ziffern der aktuellen Unix-Zeit'
       li= 'Länge des pseudozufälligen Strings: 20 Zeichen'
+    br
+    br
+    br
+    h1= 'Zufallszahlen'
+    h2= 'Allgemein'
+    h2= 'Zufall'
+    h2= 'Entropie'
+    h2= 'Pseudozufallszahlen'
+    h2= 'Spektraltest'
     p. 
       Made by #[a(href='https://www.fabianreitz.dev') Fabian Reitz] - View my Code on #[a(href='https://github.com/FabianReitz/audio_base64_converter') GitHub]
       
